# dual-llm-bot

./: .gitignore  README.md  docker-compose.yml
auth_service/: .env.example  Dockerfile  pyproject.toml  pytest.ini
auth_service/app/: main.py
auth_service/app/api/: deps.py  router.py  routes_auth.py
auth_service/app/core/: config.py  exceptions.py  security.py
auth_service/app/db/: base.py  models.py  session.py
auth_service/app/repositories/: users.py
auth_service/app/schemas/: auth.py  user.py
auth_service/app/usecases/: auth.py
auth_service/auth_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
auth_service/tests/: conftest.py  test_api.py  test_repositories.py  test_security.py  test_usecases.py
bot_service/: .env.example  Dockerfile  pyproject.toml  pytest.ini
bot_service/app/: main.py  run_bot.py
bot_service/app/bot/: dispatcher.py  handlers.py
bot_service/app/core/: config.py  jwt.py
bot_service/app/infra/: celery_app.py  redis.py
bot_service/app/services/: openrouter_client.py
bot_service/app/tasks/: llm_tasks.py
bot_service/tests/: conftest.py  test_handlers.py  test_jwt.py  test_openrouter.py
